[tool.poetry]
name = "gtfs-to-osm"
version = "0.1.0"
description = "A Jupyter correlation tool between GTFS and OSM bus stops"
authors = ["Cosmin Luță <q4break@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gtfs-functions = "^2.0.4"
ipyleaflet = "^0.17.3"
ipywidgets = "^8.0.6"
voluptuous = "^0.13.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
